Fixed spacing with company.html

--- a/css/roos-roxie.css
+++ b/css/roos-roxie.css
@@ -6329,3 +6329,6 @@ hr.space { /* not all of these properties seem needed anymore, but keeping for c
 		width: auto;
 		max-width: 252px !important;
 	}
+}
+
+.roosC ul.list-compact, .roosC .list-compact li {padding-left: 0;}
